--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TOSCA</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
     
     <script src="assets/js/angular.min.js"></script>    
     <script src="assets/js/jquery-3.4.1.min.js"></script>
