--- a/testimony.html
+++ b/testimony.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TOSCA</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <script src="assets/js/angular.min.js"></script>    
-    <script src="assets/js/jquery-3.4.1.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/angular.min.js"></script>    
+    <script src="js/jquery-3.4.1.min.js"></script>
 
     <script>
             var app = angular.module('myApp', []);
